--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,18 @@
     "issues": "https://github.com/magicsunday/jsonmapper/issues"
   },
   "require": {
-    "php": "^7.4",
+    "php": "^7.4 || ^8.0",
     "ext-json": "*",
-    "symfony/property-info": "^5.0",
-    "symfony/property-access": "^5.0"
+    "symfony/property-info": "^5.2",
+    "symfony/property-access": "^5.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5"
+    "phpunit/phpunit": "^9.5",
+    "phpstan/phpstan": "^0.12",
+    "squizlabs/php_codesniffer": "^3.5"
+  },
+  "suggest": {
+    "phpdocumentor/reflection-docblock": "In order to use the PhpDocExtractor this library is required too."
   },
   "autoload": {
     "psr-4": {
