--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "php": "^7.4 || ^8.0",
     "ext-json": "*",
     "symfony/property-info": "^5.2",
-    "symfony/property-access": "^5.2"
+    "symfony/property-access": "^5.2",
+    "doctrine/inflector": "^2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
