--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "ext-json": "*",
     "symfony/property-info": "^5.2",
     "symfony/property-access": "^5.2",
-    "doctrine/inflector": "^2.0"
+    "doctrine/inflector": "^2.0",
+    "doctrine/annotations": "^1.13"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
