--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -1,4 +1,4 @@
-name: PHPUnit
+name: PHPStan
 
 on: [push, pull_request]
 
@@ -18,10 +18,9 @@ jobs:
         with:
           php-version: ${{ matrix.php-version }}
           extensions: json,intl,mbstring
-          coverage: pcov
 
       - uses: actions/checkout@v2
 
       - run: composer validate
       - run: composer install --no-progress
-      - run: vendor/bin/phpunit --coverage-clover=tests/coverage.xml
+      - run: vendor/bin/phpstan analyse -c phpstan.neon
