--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -8,8 +8,8 @@ jobs:
 
     strategy:
       matrix:
-        operating-system: [ubuntu-20.04]
-        php-version: ['7.4', '8.0', '8.1']
+        operating-system: [ubuntu-22.04]
+        php-version: ['7.4', '8.0', '8.1', '8.2']
 
     name: Testing PHP ${{ matrix.php-version }} on ${{ matrix.operating-system }}
 
