Added phpdocumentor/reflection-docblock to github workflow action for PHPUnit

--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -24,4 +24,5 @@ jobs:
 
       - run: composer validate
       - run: composer install --no-progress
+      - run: composer require phpdocumentor/reflection-docblock
       - run: vendor/bin/phpunit --coverage-clover=tests/coverage.xml
