--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: [ '8.1', '8.2', '8.3' ]
+                php: [ '7.3', '7.4', '8.0' ]
 
         steps:
             -   id: checkout
@@ -23,7 +23,7 @@ jobs:
                 uses: shivammathur/setup-php@v2
                 with:
                     php-version: ${{ matrix.php }}
-                    tools: composer:v2, php-cs-fixer
+                    tools: composer:v2
 
             -   name: Validate composer.json and composer.lock
                 run: composer validate
