--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,9 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
-    "phpstan/phpstan": "^1.2",
-    "squizlabs/php_codesniffer": "^3.6"
+    "phpstan/phpstan": "^1.9",
+    "squizlabs/php_codesniffer": "^3.7",
+    "phpdocumentor/reflection-docblock": "^5.3"
   },
   "suggest": {
     "phpdocumentor/reflection-docblock": "In order to use the PhpDocExtractor this library is required too."
