--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,10 +1,10 @@
 parameters:
-    # you can currently choose from 10 levels (0 is the loosest and 9 is the strictest).
+    # You can currently choose from 10 levels (0 is the loosest and 9 is the strictest).
     level: 8
 
     paths:
         - src
-        # if you have tests and want to analyze this folder, uncomment the line below
+        # If you have tests and want to analyze this folder, uncomment the line below
         - test
 
     # Ignored validations
