--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,14 @@
       "name": "Rico Sonntag",
       "email": "mail@ricosonntag.de",
       "role": "Developer",
-      "homepage": "http://www.ricosonntag.de/"
+      "homepage": "https://www.ricosonntag.de/"
     }
   ],
   "support": {
     "issues": "https://github.com/magicsunday/jsonmapper/issues"
   },
   "require": {
-    "php": "^7.3 || ^8.0",
+    "php": "~7.3.0",
     "ext-json": "*",
     "symfony/property-info": "^5.2",
     "symfony/property-access": "^5.2",
