Update dev tools

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,23 @@
-/.idea
-/vendor
-/test/coverage
-/tests
-/coverage
+# PHPStorm
+.idea
+
+# OSX
+.DS_Store
+
+# Composer
+vendor/
+bin/
+logs/
 composer.lock
+
+# Build stuff
+.build/
+
+# Cache
+.php-cs-fixer.cache
+.phplint.cache
 .phpunit.result.cache
+.phpunit.cache
+
+# Custom
+/test/
