--- a/composer.json
+++ b/composer.json
@@ -1,43 +1,82 @@
 {
-  "name": "magicsunday/jsonmapper",
-  "description": "Map JSON to PHP",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Rico Sonntag",
-      "email": "mail@ricosonntag.de",
-      "role": "Developer",
-      "homepage": "http://www.ricosonntag.de/"
+    "name": "magicsunday/jsonmapper",
+    "description": "Map JSON to PHP",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Rico Sonntag",
+            "email": "mail@ricosonntag.de",
+            "role": "Developer",
+            "homepage": "https://www.ricosonntag.de/"
+        }
+    ],
+    "support": {
+        "issues": "https://github.com/magicsunday/jsonmapper/issues"
+    },
+    "require": {
+        "php": "^7.4 || ^8.0",
+        "ext-json": "*",
+        "symfony/property-info": "^5.2",
+        "symfony/property-access": "^5.2",
+        "doctrine/inflector": "^2.0",
+        "doctrine/annotations": "^1.13"
+    },
+    "require-dev": {
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "friendsofphp/php-cs-fixer": "^3.1",
+        "overtrue/phplint": "^3.4 || ^9.0",
+        "phpunit/phpunit": "^9.0 || ^10.0 || ^11.0",
+        "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan-phpunit": "^1.3",
+        "phpstan/phpstan-strict-rules": "^1.5",
+        "phpstan/phpstan-deprecation-rules": "^1.1",
+        "rector/rector": "^1.0"
+    },
+    "suggest": {
+        "phpdocumentor/reflection-docblock": "In order to use the PhpDocExtractor this library is required too."
+    },
+    "autoload": {
+        "psr-4": {
+            "MagicSunday\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "MagicSunday\\Test\\": "test/"
+        }
+    },
+    "config": {
+        "bin-dir": ".build/bin",
+        "vendor-dir": ".build/vendor",
+        "discard-changes": true,
+        "sort-packages": true,
+        "optimize-autoloader": true,
+        "platform-check": false
+    },
+    "scripts": {
+        "ci:test:php:lint": [
+            "phplint"
+        ],
+        "ci:test:php:unit": [
+            "phpunit"
+        ],
+        "ci:test:php:phpstan": [
+            "phpstan analyze"
+        ],
+        "ci:test:php:phpstan:baseline": [
+            "phpstan analyze --generate-baseline phpstan-baseline.neon --allow-empty-baseline"
+        ],
+        "ci:test:php:rector": [
+            "rector process --config rector.php --dry-run"
+        ],
+        "ci:test": [
+            "@ci:test:php:lint",
+            "@ci:test:php:phpstan",
+            "@ci:test:php:rector",
+            "@ci:test:php:unit"
+        ],
+        "ci:cgl": [
+            "php-cs-fixer fix --diff --verbose"
+        ]
     }
-  ],
-  "support": {
-    "issues": "https://github.com/magicsunday/jsonmapper/issues"
-  },
-  "require": {
-    "php": "^7.4 || ^8.0",
-    "ext-json": "*",
-    "symfony/property-info": "^5.2",
-    "symfony/property-access": "^5.2",
-    "doctrine/inflector": "^2.0",
-    "doctrine/annotations": "^1.13"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^9.5",
-    "phpstan/phpstan": "^1.9",
-    "squizlabs/php_codesniffer": "^3.7",
-    "phpdocumentor/reflection-docblock": "^5.3"
-  },
-  "suggest": {
-    "phpdocumentor/reflection-docblock": "In order to use the PhpDocExtractor this library is required too."
-  },
-  "autoload": {
-    "psr-4": {
-      "MagicSunday\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "MagicSunday\\Test\\": "test/"
-    }
-  }
 }
