--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,16 +1,18 @@
+includes:
+    - %currentWorkingDirectory%/.build/vendor/phpstan/phpstan-strict-rules/rules.neon
+    - %currentWorkingDirectory%/.build/vendor/phpstan/phpstan-deprecation-rules/rules.neon
+#    - %currentWorkingDirectory%/phpstan-baseline.neon
+
 parameters:
     # You can currently choose from 10 levels (0 is the loosest and 9 is the strictest).
     level: 8
 
     paths:
-        - src
-        # If you have tests and want to analyze this folder, uncomment the line below
-        - test
+        - %currentWorkingDirectory%/src/
+
+    excludePaths:
+        - %currentWorkingDirectory%/test/
+        - %currentWorkingDirectory%/vendor/
 
     # Ignored validations
     checkGenericClassInNonGenericObjectType: false
-
-    # Ignore errors
-    ignoreErrors:
-        - '#^Method MagicSunday\\JsonMapper\:\:getReflectionClass\(\) never returns null so it can be removed from the return type.$#'
-        - '#^Dead catch - ReflectionException is never thrown in the try block.$#'
