Apply php-cs-fixer rules

--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,16 @@
         "issues": "https://github.com/magicsunday/jsonmapper/issues"
     },
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": ">=7.4.0 <8.1.0",
         "ext-json": "*",
-        "symfony/property-info": "^5.2",
-        "symfony/property-access": "^5.2",
-        "doctrine/inflector": "^2.0",
-        "doctrine/annotations": "^1.13"
+        "symfony/property-info": "^5.0 || ^6.0 || ^7.0",
+        "symfony/property-access": "^5.0 || ^6.0 || ^7.0",
+        "doctrine/inflector": "^1.0 || ^2.0",
+        "doctrine/annotations": "^1.0"
     },
     "require-dev": {
-        "phpdocumentor/reflection-docblock": "^5.3",
-        "friendsofphp/php-cs-fixer": "^3.1",
+        "phpdocumentor/reflection-docblock": "^4.0 || ^5.0",
+        "friendsofphp/php-cs-fixer": "^3.50",
         "overtrue/phplint": "^3.4 || ^9.0",
         "phpunit/phpunit": "^9.0 || ^10.0 || ^11.0",
         "phpstan/phpstan": "^1.10",
