--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "phpdocumentor/reflection-docblock": "^5.0",
         "friendsofphp/php-cs-fixer": "^3.50",
         "overtrue/phplint": "^3.4 || ^9.0",
-        "phpunit/phpunit": "^9.0 || ^10.0 || ^11.0",
+        "phpunit/phpunit": "^10.0 || ^11.0",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-phpunit": "^1.3",
         "phpstan/phpstan-strict-rules": "^1.5",
