--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,7 +1,7 @@
 includes:
     - %currentWorkingDirectory%/.build/vendor/phpstan/phpstan-strict-rules/rules.neon
     - %currentWorkingDirectory%/.build/vendor/phpstan/phpstan-deprecation-rules/rules.neon
-#    - %currentWorkingDirectory%/phpstan-baseline.neon
+    - %currentWorkingDirectory%/phpstan-baseline.neon
 
 parameters:
     # You can currently choose from 10 levels (0 is the loosest and 9 is the strictest).
