--- a/composer.json
+++ b/composer.json
@@ -14,23 +14,19 @@
         "issues": "https://github.com/magicsunday/jsonmapper/issues"
     },
     "require": {
-        "php": ">=7.3.0 <8.1.0",
+        "php": ">=5.6.0 <7.0.0",
         "ext-json": "*",
-        "symfony/property-info": "^5.0 || ^6.0 || ^7.0",
-        "symfony/property-access": "^5.0 || ^6.0 || ^7.0",
-        "doctrine/inflector": "^1.0 || ^2.0",
-        "doctrine/annotations": "^1.0 || ^2.0"
+        "symfony/property-info": "^3.4",
+        "symfony/property-access": "^3.4",
+        "doctrine/inflector": "^1.1",
+        "doctrine/annotations": "^1.4"
     },
     "require-dev": {
-        "phpdocumentor/reflection-docblock": "^4.0 || ^5.0",
+        "symfony/phpunit-bridge": "^5.0",
+        "phpdocumentor/reflection-docblock": "^3.3",
         "friendsofphp/php-cs-fixer": "^2.0",
-        "overtrue/phplint": "^2.0 || ^3.0 || ^9.0",
-        "phpunit/phpunit": "^9.0 || ^10.0 || ^11.0",
-        "phpstan/phpstan": "^1.10",
-        "phpstan/phpstan-phpunit": "^1.3",
-        "phpstan/phpstan-strict-rules": "^1.5",
-        "phpstan/phpstan-deprecation-rules": "^1.1",
-        "rector/rector": "^1.0"
+        "overtrue/phplint": "^2.4",
+        "phpunit/phpunit": "^5.7"
     },
     "suggest": {
         "phpdocumentor/reflection-docblock": "In order to use the PhpDocExtractor this library is required too."
@@ -46,6 +42,9 @@
         }
     },
     "config": {
+        "platform": {
+            "php": "5.6"
+        },
         "bin-dir": ".build/bin",
         "vendor-dir": ".build/vendor",
         "discard-changes": true,
@@ -60,19 +59,8 @@
         "ci:test:php:unit": [
             "phpunit"
         ],
-        "ci:test:php:phpstan": [
-            "phpstan analyze"
-        ],
-        "ci:test:php:phpstan:baseline": [
-            "phpstan analyze --generate-baseline phpstan-baseline.neon --allow-empty-baseline"
-        ],
-        "ci:test:php:rector": [
-            "rector process --config rector.php --dry-run"
-        ],
         "ci:test": [
             "@ci:test:php:lint",
-            "@ci:test:php:phpstan",
-            "@ci:test:php:rector",
             "@ci:test:php:unit"
         ],
         "ci:cgl": [
