Drop PHP 8.2 support, Rework deprecated usage of symfony classes

--- a/.phplint.yml
+++ b/.phplint.yml
@@ -1,6 +1,8 @@
-path: ./
+path:
+    - ./src
+    - ./tests
 jobs: 10
-cache: .build/.phplint.cache
+cache-dir: .build/cache/.phplint.cache
 extensions:
     - php
 exclude:
