--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,13 +1,2 @@
 parameters:
-	ignoreErrors:
-		-
-			message: '#^Argument of an invalid type array\<mixed, mixed\>\|object supplied for foreach, only iterables are supported\.$#'
-			identifier: foreach.nonIterable
-			count: 2
-			path: src/JsonMapper.php
-
-		-
-			message: '#^Argument of an invalid type array\<mixed\>\|object supplied for foreach, only iterables are supported\.$#'
-			identifier: foreach.nonIterable
-			count: 2
-			path: src/JsonMapper.php
+    ignoreErrors: []
