--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
         "symfony/property-info": "^7.3",
         "symfony/property-access": "^7.3",
         "symfony/type-info": "^7.3",
-        "doctrine/inflector": "^2.0",
-        "doctrine/annotations": "^2.0"
+        "doctrine/inflector": "^2.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.65",
