--- a/composer.json
+++ b/composer.json
@@ -92,8 +92,12 @@
             "@ci:test:php:lint",
             "@ci:test:php:phpstan",
             "@ci:test:php:rector",
-            "@ci:test:php:cgl",
-            "@ci:test:php:unit"
+            "@ci:test:php:cpd",
+            "@ci:test:php:unit",
+            "@ci:test:php:cgl"
+        ],
+        "post-update-cmd": [
+            "npm install jscpd"
         ]
     }
 }
