--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
     "require": {
         "php": ">=8.3.0 <8.6.0",
         "ext-json": "*",
-        "symfony/property-info": "^7.3",
-        "symfony/property-access": "^7.3",
-        "symfony/type-info": "^7.3",
+        "symfony/property-info": "^7.3 || ^8.0",
+        "symfony/property-access": "^7.3 || ^8.0",
+        "symfony/type-info": "^7.3 || ^8.0",
         "doctrine/inflector": "^2.0"
     },
     "require-dev": {
@@ -29,7 +29,7 @@
         "phpstan/phpstan-deprecation-rules": "^2.0",
         "phpstan/phpstan-phpunit": "^2.0",
         "phpstan/phpstan-strict-rules": "^2.0",
-        "phpunit/phpunit": "^11.0 || ^12.0",
+        "phpunit/phpunit": "^12.0",
         "rector/rector": "^2.0"
     },
     "suggest": {
